public/styles/_core/playerview.scss
#background-logo {
	position: absolute;
	bottom: 0px;
	left: 0px;
	z-index:1;
}

#overlay {	
	background-color: $greyish-brown-70;
}

#gameContent {
	@include gradient-vertical($background-color, $turquoise-dark, 55%, 45%);
  @include linear_transition(filter, 0.5s);
	
	height: 100%;
	text-align: center;
	padding: 8px;
	padding-top: 40px;
	color: white;

	// During the gameplay
	&.in-game {
		background-color: $turquoise-dark;
		height: calc(100% - 50px);
		// padding-top:80px;

		// Show coin and points bar
		footer#bottom-bar {
			display: block;
		}

	}

	// On Mobile
	&.isMobile {
		padding-top: 10px;
	}

	// Blur all contents during modal
	&.blur {
		@include filter(blur, 2.9px);
	}

}

#main_menu {

	#btn-back {

		color: $color-white;

		height: 32px;
		width: 64px;
		
    text-align: center;
    float: right;
		font-size: 12px;
    line-height: 1.17;
    padding-top: 9%;
    padding-right: 21%;

		@include gradient-vertical($sunflower, $tangerine, 90%, 10%);	

  	&:before {
	    position: absolute;
	    content: "";
	    top: 20px;
	    left: 86%;
	    width: 0;
	    height: 0;
	    border-left: 28px solid #ff7800;
	    border-top: 13px solid transparent;
	    border-bottom: 13px solid transparent;
	  }
	}

	#btn-reconnect, #btn-quit-no {
		@include gradient-vertical($blue-light, $blue-dark, 90%, 10%);	
	}

	#btn-quit {
    margin-top: -10%;
		@include gradient-vertical($pink-red-two, $pink-dark, 90%, 10%);	
	}
	#btn-quit-yes {
		@include gradient-vertical($pink-red-two, $pink-dark, 90%, 10%);
	}

}

// Players
.player-logo {

	height: 60px;
	width: 70%;
	display: inline-block;
	padding: 0px;
  background-repeat: no-repeat;
	// background-size: contain;
	color: $grey-dark;

	background-position: 40px 10px;
  background-size: 40px 40px;

	p {
		display: inline;
		color: $grey-dark;
    text-transform: uppercase;
    line-height: 60px;
    padding-left: 60px;
	}

	&.lg {
		height: 128px !important;
		width: 128px !important;
		background-size: 128px 128px;
		background-position: 0px 0px;
	}

	&#player-0 {
		background-image : $player-one-logo;
	}
	&#player-1 {
		background-image : $player-two-logo;
	}
	&#player-2 {
		background-image : $player-three-logo;
	}
	&#player-3 {
		background-image : $player-four-logo;
	}
	&#player-4 {
		background-image : $player-five-logo;
	}
}

// Default button shadow and margin
.btn { 
	@include box-shadow(0px, 7px, 0px, darken($background-color, 10%));
	margin-bottom: 7px;

	&:hover, &:focus, &:visited {
		@include box-shadow(0px, 7px, 0px, darken($background-color, 10%));
		// margin-bottom: 7px;
		cursor: pointer;
		color: white;
		outline: none;
	}

	color: white;
	border: 0px;
	border-radius: 0px;
	height:48px;
	// width: 160px;
	padding:0px;
	font-size: 24px;
	margin-bottom: 10%;
	margin-top: 5%;
	font-family: AvenirNext-Bold;
  font-size: 24px;
  font-weight: bold;
  font-style: normal;
  font-stretch: normal;
  line-height: 1;
  letter-spacing: 0px;
  text-align: center;

	width: 80%;

	&#btn_yes {
		background-color: $blue-light;
		// border-bottom: 4px solid $dark-sky-blue;
	}
	&#btn_no {
		background-color: $sunflower;
		// border-bottom: 4px solid $tangerine;
	}

}
.btn_cap {
	width: 90%;
	margin: 15% auto;
	margin-top: 0px;
	font-size: 12px;
	color: lighten($background-color, 20%);
	&.pink {
		color: $pink-dark;
	}
}

.header {
	font-size: 24px;
	font-family: $aileron;
	text-align: center;
	margin: 0px;
}
.subtitle {
	font-size: 12px;
	font-family: $avenir-reg;
	text-align: center;
	margin: 0px;
}
.caption {
	font-family: $avenir-reg;
	font-size: 12px;
}
.white {
	color: white;
}
.light {
	line-height: normal;
}

// Highlight/glow for any block element
@include keyframes(highlight-pulse) {
  0%   {box-shadow: 0 0 15px 10px $color-orange}
	60%  {box-shadow: 0 0 0px 0px $color-orange}
	100% {box-shadow: 0 0 15px 10px $color-orange}
}
.highlight {
	@include animation('highlight-pulse 3s infinite');
}


.form {
	&#decider, &#decider-controls {
		position: absolute;
		bottom: 0px;
		width: 100%;
		left: 0px;
		max-height: 80px;
		margin: 0px;

		input {
			width: 100%;
			left: 0px;
			// height:100%;
			margin: 0px;
			position: absolute;
			bottom: 0px;
			background-color: $turquoise-dark;
		}

		.next-step {
			background-color: $turquoise-dark;
			color: white;
			border-radius: 5px;
		  box-shadow: 0 2px 0 0 rgba(235, 235, 235, 0.75);
		  border: solid 1px #ebebeb;
		  width: 112px;
		  height: 24px;
		}

		#btn-next {
			background-color: transparent;
			border: 0px;
		}

		@at-root .form {
			min-height: 0px;
		}

	}

	&.role {

	}
}

input.post-button {
	position: fixed;
	bottom: 0px;
	left: 0px;
	width: 100%;
	margin-bottom: 0px;
	background-color: $turquoise-dark;
	z-index: 1000;
}

.ended-container {
	background-color: white;
	margin: 0 auto;
}

.winner {
	background-color: white;
}

// HIDE ANY DECIDER-ONLY VIEWS BY DEFAULT
#decider, #decider-controls {
		display: none;
}

.screen {
	display: none;
	float: none;
  margin: 0 auto; 
}

// Add background to any "read out loud" decider instructions
.read {
	background: $blue-dark;
	padding: 10px;
	color: white;
}

// Timer Animation
.timer_wrap {
	button {
    background: none;
    border: none;
    max-width: 246px;
	}
	svg {
		// width: 82% !important;
		margin: 20px auto;
    max-width: 246px;
	}
	h1 {
    font-family: $header-type;
    font-size: 20px;
    margin-top: 1%;
	}
	p {
    display: inline-block;
    margin-top: 48%;
    font-size: 17px;
    width: 70%;
    text-align: center;
	}
	.progressbar-text {
		font-size: 72px;
		letter-spacing: -2.1px;
    margin-top: -79%;
    color: white !important;
	}

	&.running {
		.speech {
			position: relative;
			z-index: 1;
			h1 {
				margin-top: -27%;
			}
			p {
				margin-top: 26%;
			}
		}
	}
}
/* ... */

